# lab_1_aicd

./: CMakeLists.txt
include/: vectors.h
include/vector/: vector.h
src/: main.cc  vector.cc  vectors.cc
